test/transparentproxy/install/testdata/debian-10-ipv6.golden
# ip6tables-save
*nat
:PREROUTING ACCEPT
:INPUT ACCEPT
:POSTROUTING ACCEPT
:OUTPUT ACCEPT
:KUMA_MESH_INBOUND -
:KUMA_MESH_OUTBOUND -
:KUMA_MESH_INBOUND_REDIRECT -
:KUMA_MESH_OUTBOUND_REDIRECT -
-A PREROUTING -p 6 -j KUMA_MESH_INBOUND
-A OUTPUT -p 6 -j KUMA_MESH_OUTBOUND
-A KUMA_MESH_INBOUND -p 6 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -s ::6/128 -o ifPlaceholder -j RETURN
-A KUMA_MESH_OUTBOUND ! -d ::1/128 -o ifPlaceholder -p 6 -m owner --uid-owner 5678 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -o ifPlaceholder -p 6 -m owner ! --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -m owner --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -d ::1/128 -j RETURN
-A KUMA_MESH_OUTBOUND -j KUMA_MESH_OUTBOUND_REDIRECT
-A KUMA_MESH_INBOUND_REDIRECT -p 6 -j REDIRECT --to-ports 15006
-A KUMA_MESH_OUTBOUND_REDIRECT -p 6 -j REDIRECT --to-ports 15001
COMMIT
# ip6tables-save end

# ip6tables-legacy-save
*nat
:PREROUTING ACCEPT
:INPUT ACCEPT
:OUTPUT ACCEPT
:POSTROUTING ACCEPT
COMMIT
# ip6tables-legacy-save end

# ip6tables-nft-save
*nat
:PREROUTING ACCEPT
:INPUT ACCEPT
:POSTROUTING ACCEPT
:OUTPUT ACCEPT
:KUMA_MESH_INBOUND -
:KUMA_MESH_OUTBOUND -
:KUMA_MESH_INBOUND_REDIRECT -
:KUMA_MESH_OUTBOUND_REDIRECT -
-A PREROUTING -p 6 -j KUMA_MESH_INBOUND
-A OUTPUT -p 6 -j KUMA_MESH_OUTBOUND
-A KUMA_MESH_INBOUND -p 6 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -s ::6/128 -o ifPlaceholder -j RETURN
-A KUMA_MESH_OUTBOUND ! -d ::1/128 -o ifPlaceholder -p 6 -m owner --uid-owner 5678 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -o ifPlaceholder -p 6 -m owner ! --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -m owner --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -d ::1/128 -j RETURN
-A KUMA_MESH_OUTBOUND -j KUMA_MESH_OUTBOUND_REDIRECT
-A KUMA_MESH_INBOUND_REDIRECT -p 6 -j REDIRECT --to-ports 15006
-A KUMA_MESH_OUTBOUND_REDIRECT -p 6 -j REDIRECT --to-ports 15001
COMMIT
# ip6tables-nft-save end
